--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Mission</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <!-- Header Section -->
+
+    <header>
+        <!-- Banner section -->
+        <section class="banner">
+            <h3 class="banner-title">Happy New Year</h3>
+            <h1 class="banner-description">New Year Party Celebration</h1>
+        </section>
+    </header>
+
+    <!-- Main Section -->
+
+    <main>
+
+    </main>
+
+    <!-- Footer Section -->
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
