--- a/index.html
+++ b/index.html
@@ -23,7 +23,35 @@
     <!-- Main Section -->
 
     <main>
+        <!-- New Year section -->
+        <section class="new-year">
+            <h1 class="new-year-title">65% OFF</h1>
+            <h5 class="new-year-deals">OUR HOLIDAY DEALS ARE BETTER</h5>
+            <h3 class="new-year-categories">ALL CATEGORIES</h3>
+            <img src="images/New Year Photo.png" alt="">
+        </section>
 
+        <!-- Party Section -->
+        <div class="party-container">
+            <div class="party-details">
+            <h1 class="party-title">Welcome to midnight party</h1>
+            <p class="party-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <button class="party-btn">JOIN NOW</button>
+            </div>
+            <div class="party-img">
+                <img src="images/Group 70.png" alt="">
+            </div>
+        </div>
+
+        <!-- Event Details Section -->
+        <section class="event-details">
+            <article class="details">
+                <h3><span class="event-color">Place:</span> New Park Hotel</h3>
+                <h3><span class="event-color">Date:</span> 31 December Night 2023</h3>
+                <h3><span class="event-color">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+            </article>
+            <button class="event-btn">JOIN NOW</button>
+        </section>
     </main>
 
     <!-- Footer Section -->
