added beat offer section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
             </article>
             <button class="event-btn">JOIN NOW</button>
         </section>
+
+        <!-- Best Offer Section -->
+        <section>
+            <div class="offer-container">
+                <div><h4 class="best-offer">NEW BEST OFFER</h4>
+                    <h1 class="offer-coming-soon">Coming Soon</h1>
+                    <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="offer-img"><img src="images/Ellipse 1.png" alt="">
+                </div>
+                <div>
+                    <h2 class="offer-year">2024</h2>
+                    <p class="offer-year-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="images/Group 96.png" alt="">
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Footer Section -->
