holiday sale section added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
             </div>
         </section>
 
+        <!-- Holidays Sale Section -->
+        <section class="holiday-section-container">
+            <div class="holiday-section-description">
+                <h4 class="functional">WHAT IS FUNCTIONAL</h4>
+                <h1 class="holiday-sale"><span style="color: rgb(255, 0, 0);">Holidays</span> Sale 50% </h1>
+                <p class="holiday-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p></div>
+                <div class="holiday-images">
+                    <div class="image1"><img src="images/Group 75.png" alt="">
+                    </div>
+                    <div class="image2"><img src="images/Rectangle 1.png" alt=""></div>
+                </div>
+                <div class="image3"><img src="images/Group 44.png" alt=""></div>
+        </section>
+
+
     </main>
 
     <!-- Footer Section -->
