portfolio section added

--- a/index.html
+++ b/index.html
@@ -85,7 +85,25 @@
                 <div class="image3"><img src="images/Group 44.png" alt=""></div>
         </section>
 
+<!-- Awesome Portfolio Section -->
 
+        <section class="portfolio-container">
+            <h4 class="gifts">THE BEST GIFTS</h4>
+            <h1 class="portfolio-title">Our Awesome Portfolio</h1>
+            <p class="portfolio-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+            <div class="img-row">
+                <div class="column"><img src="images/Rectangle 3.png" alt=""></div>
+                <div class="column"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="column"><img src="images/Rectangle 5.png" alt=""></div>
+            </div>
+            <div class="img-row">
+                <div class="column"><img src="images/Rectangle 6.png" alt=""></div>
+                <div class="column"><img src="images/Rectangle 7.png" alt=""></div>
+                <div class="column"><img src="images/Rectangle 8.png" alt=""></div>
+            </div>
+
+        </section>
     </main>
 
     <!-- Footer Section -->
