sebscription section added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,16 @@
     <!-- Footer Section -->
 
     <footer>
-
+        <!-- Subscription Section -->
+        <section class="news-container">
+            <img class="sub-img" src="images/Group 61.png" alt="">
+            <h1 class="sub-title">Subscribe Newsletter</h1>
+            <p class="news-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <form>
+                <input type="text">
+                <label for="submit">Submit</label>
+            </form>
+        </section>
     </footer>
 </body>
 
