footer section added

--- a/index.html
+++ b/index.html
@@ -114,11 +114,52 @@
             <img class="sub-img" src="images/Group 61.png" alt="">
             <h1 class="sub-title">Subscribe Newsletter</h1>
             <p class="news-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <form>
-                <input type="text">
-                <label for="submit">Submit</label>
-            </form>
+            <div class="sub-div">
+                <input class="input-sub" type="text">
+                <button class="submit">Subscribe</button>
+            </div>
         </section>
+
+            <!-- Footer Section -->
+            <section class="footer-container">
+                <div class="parent-div">
+                    <div class="div-container">
+                        <div>
+                            <p class="footer-details">44, Big Building Roosevelt Street</p>
+                        </div>
+                        <div class="contact">
+                            <img height="30px" width="30px" float="left" src="icons/Call.png" alt="">
+                            <p>+00 123 584 124</p>
+                        </div>
+                    </div>
+                    <div class="div-container">
+                        <div>
+                            <p class="footer-details">Beach Gardens Florida 33410</p>
+                        </div>
+                        <div class="contact">
+                            <img height="30px" width="30px" float="left" src="icons/Website.png" alt="">
+                            <p>www.website.com</p>
+                        </div>
+                    </div>
+                    <hr class="horizontal-line">
+                    <div class="img-parent-div">
+                        <div class="img-div"><img src="icons/Facebook.png" alt=""></div>
+                        <div class="img-div"><img src="icons/Instagram.png" alt=""></div>
+                        <div class="img-div"><img src="icons/Twitter.png" alt=""></div>
+                        <div class="img-div"><img src="icons/Linkedin.png" alt=""></div>
+                    </div>
+                    <hr class="second-horizontal-line">
+                    <div class="all-rights">
+                        <div>
+                            <h2 class="reserved">2017, All Rights Reserved.</h2>
+                        </div>
+                        <div>
+                            <button class="footer-btn">Unsubscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
     </footer>
 </body>
 
