--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1 class="sub-title">Subscribe Newsletter</h1>
             <p class="news-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             <div class="sub-div">
-                <input class="input-sub" type="text">
+                <input class="input-sub" placeholder="user@gmail.com" type="text">
                 <button class="submit">Subscribe</button>
             </div>
         </section>
